if(BUILD_EXAMPLES)
    add_subdirectory(samples)
    add_subdirectory(uidemo1)
    add_subdirectory(uidemo2)
endif(BUILD_EXAMPLES)
add_subdirectory(w9)
add_subdirectory(curldownload)

if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/hui-er-pu)
    add_subdirectory(hui-er-pu)
endif()
if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/wifiwpa)
    add_subdirectory(wifiwpa)
endif()
